...
                color: colors.text3,
                fontSize: typography.body.size,
                fontFamily: fonts.bodyRegular,
                marginTop: 16,
              }}
            >
              No workouts yet
            </Text>
          </View>
        }
      />
    </SafeAreaView>
  );
...
